[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/GUI/thme_title.tres" type="Theme" id=1]
[ext_resource path="res://Assets/GUI/thme_normal.tres" type="Theme" id=2]
[ext_resource path="res://Assets/GUI/ConfigScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.992157, 0.988235, 0.988235, 1 )

[node name="ConfigScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 57.0
theme = ExtResource( 1 )
text = "Configuracoes"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 984.0
margin_bottom = 163.0
custom_constants/separation = 10

[node name="SFX" type="CenterContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
margin_left = 262.0
margin_right = 722.0
margin_bottom = 28.0
custom_constants/separation = 20

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX/HBoxContainer"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX/HBoxContainer"]
margin_left = 60.0
margin_right = 460.0
margin_bottom = 28.0
rect_min_size = Vector2( 400, 28 )
size_flags_horizontal = 10
custom_styles/grabber_area = SubResource( 1 )
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="Music" type="CenterContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 984.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
margin_left = 246.0
margin_right = 737.0
margin_bottom = 28.0
custom_constants/separation = 20

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Music/HBoxContainer"]
margin_top = 3.0
margin_right = 71.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Musica"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/Music/HBoxContainer"]
margin_left = 91.0
margin_right = 491.0
margin_bottom = 28.0
rect_min_size = Vector2( 400, 28 )
size_flags_horizontal = 10
custom_styles/grabber_area = SubResource( 1 )
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 984.0
margin_bottom = 232.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 453.0
margin_right = 531.0
margin_bottom = 29.0
theme = ExtResource( 2 )
text = "Voltar"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/SFX/HBoxContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/Music/HBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Button" to="." method="_on_Button_pressed"]
